# uir-framework

./: .gitignore  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  maintenance.yml  performance.yml  release.yml  security.yml
deployments/: kubernetes.yaml
deployments/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
deployments/kubernetes/production/: deployment-patch.yaml  kustomization.yaml
deployments/kubernetes/staging/: deployment-patch.yaml  kustomization.yaml
docs/: API_SPEC.md  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN.md
scripts/: README.md  test_runner.py  test_with_mocks.py
src/uir/: __init__.py  _version.py  aggregator.py  auth.py  cache.py  client.py  models.py  query_processor.py  router.py
src/uir/api/: __init__.py  main.py
src/uir/core/: __init__.py  adapter.py  circuit_breaker.py  rate_limiter.py
src/uir/mocks/: __init__.py  database.py  embedding_service.py  entity_extractor.py  external_apis.py  spell_checker.py
src/uir/providers/: __init__.py  elasticsearch.py  google.py  manager.py  pinecone.py
tests/: __init__.py  conftest.py  locustfile.py  test_aggregator.py  test_auth.py  test_cache.py  test_client.py  test_query_processor.py  test_router.py
tests/performance/: test_benchmarks.py
tests/test_api/: test_integration.py
tests/test_core/: test_circuit_breaker.py  test_rate_limiter.py
tests/test_integration/: __init__.py  test_end_to_end.py
tests/test_providers/: test_google_adapter.py  test_pinecone_adapter.py
